[tool.poetry]
name = "streamlit-space"
version = "0.1.1"
description = "Spacing component for Streamlit"
authors = ["Yi Zhang <yizhang.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://st-space.streamlit.app"
repository = "https://github.com/imyizhang/streamlit-space"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"